Updated vimeo caption

--- a/_includes/vimeoPlayer.html
+++ b/_includes/vimeoPlayer.html
@@ -8,5 +8,6 @@
       mozallowfullscreen
       allowfullscreen>
   </iframe>
-  <figcaption>{{include.caption}}</figcaption>
+  <div style="display:table-caption;caption-side:bottom;" class="center">{{include.caption}}</div>
+  <!-- <figcaption>{{include.caption}}</figcaption> -->
 </div>
