Updated animation caption

--- a/_includes/vimeoPlayer.html
+++ b/_includes/vimeoPlayer.html
@@ -8,6 +8,6 @@
       mozallowfullscreen
       allowfullscreen>
   </iframe>
-  <div style="display:table-caption;caption-side:bottom;" class="center">{{include.caption}}</div>
-  <!-- <figcaption>{{include.caption}}</figcaption> -->
+  <!-- <div style="display:table-caption;caption-side:bottom;" class="center">{{include.caption}}</div> -->
+  <figcaption><font size="5">{{include.caption}}</font></figcaption>
 </div>
